# textflow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yaml
examples/: alignment.rs  columns.rs  test-vec.rs
src/: align.rs  align_rich.rs  columns.rs  content.rs  layout.rs  lib.rs  utils.rs
