[package]
name = "textflow"
version = "0.1.0"
edition = "2021"
authors = ["Louis DEVIE"]
description = "An extension for textwrap"
homepage = "https://github.com/louisdevie/textflow"
repository = "https://github.com/louisdevie/textflow"
license = "MIT"
license-file = "LICENSE"
keywords = ["console", "terminal", "format", "align", "grid"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap = "0.14"