[package]
name = "textflow"
version = "0.2.0"
edition = "2021"
authors = ["Louis DEVIE"]
description = "An extension for textwrap"
homepage = "https://github.com/louisdevie/textflow"
repository = "https://github.com/louisdevie/textflow"
license = "MIT"
keywords = ["console", "terminal", "format", "align", "grid"]
categories = ["command-line-interface"]

[dependencies]
textwrap = "=0.14"
regex = "~1"
lazy_static = "~1"
unicode-width = ">=0.1.9"
perroquet = { version = "^0.0", optional = true, path = "/home/louisdevie/devprojects/perroquet" }

[features]
styling = ["perroquet"]